add working of the calculater(Have BUGS)

--- a/index.html
+++ b/index.html
@@ -19,18 +19,18 @@
                 <div class="number" id="4">4</div>
                 <div class="number" id="5">5</div>
                 <div class="number" id="6">6</div>
-                <div class="number" id="3">7</div>
-                <div class="number" id="4">8</div>
-                <div class="number" id="5">9</div>
-                <div class="number" id="6">0</div>
-                <div class="number" id="00">00</div>
-                <div class="number" id="clear">AC</div>
+                <div class="number" id="7">7</div>
+                <div class="number" id="8">8</div>
+                <div class="number" id="9">9</div>
+                <div class="number" id="0">0</div>
+                <div class="number-functions" id="clear">AC</div>
+                <div class="number-functions" id="equal">=</div>
             </div>
             <div class="operator-pad">
-                <div class="operator" id="addition" >+</div>
-                <div class="operator" id="multiplicatoin">*</div>
-                <div class="operator" id="subtraction">-</div>
-                <div class="operator" id="divison">/</div>
+                <div class="operator" id="+">+</div>
+                <div class="operator" id="*">*</div>
+                <div class="operator" id="-">-</div>
+                <div class="operator" id="/">/</div>
             </div>
         </div>
     </div>
